@@ -1,0 +1,73 @@
+/**************************************************************************
+*   Copyright (C) 2004-2007 by Michael Medin <michael@medin.name>         *
+*                                                                         *
+*   This code is part of NSClient++ - http://trac.nakednuns.org/nscp      *
+*                                                                         *
+*   This program is free software; you can redistribute it and/or modify  *
+*   it under the terms of the GNU General Public License as published by  *
+*   the Free Software Foundation; either version 2 of the License, or     *
+*   (at your option) any later version.                                   *
+*                                                                         *
+*   This program is distributed in the hope that it will be useful,       *
+*   but WITHOUT ANY WARRANTY; without even the implied warranty of        *
+*   MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the         *
+*   GNU General Public License for more details.                          *
+*                                                                         *
+*   You should have received a copy of the GNU General Public License     *
+*   along with this program; if not, write to the                         *
+*   Free Software Foundation, Inc.,                                       *
+*   59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.             *
+***************************************************************************/
+#include "stdafx.h"
+#include "CauseCrashes.h"
+
+CauseCrashes::CauseCrashes() {
+}
+CauseCrashes::~CauseCrashes() {
+}
+
+
+bool CauseCrashes::loadModule() {
+	return false;
+}
+
+bool CauseCrashes::loadModuleEx(std::wstring alias, NSCAPI::moduleLoadMode mode) {
+	try {
+		register_command(_T("CrashClient"), _T("Crash NSClient++"));
+	} catch (nscapi::nscapi_exception &e) {
+		NSC_LOG_ERROR_STD(_T("Failed to register command: ") + utf8::cvt<std::wstring>(e.what()));
+		return false;
+	} catch (std::exception &e) {
+		NSC_LOG_ERROR_STD(_T("Exception: ") + utf8::cvt<std::wstring>(e.what()));
+		return false;
+	} catch (...) {
+		NSC_LOG_ERROR_STD(_T("Failed to register command."));
+		return false;
+	}
+	return true;
+}
+bool CauseCrashes::unloadModule() {
+	return true;
+}
+
+bool CauseCrashes::hasCommandHandler() {
+	return true;
+}
+bool CauseCrashes::hasMessageHandler() {
+	return false;
+}
+
+NSCAPI::nagiosReturn CauseCrashes::handleCommand(const std::wstring &target, const std::wstring &command, std::list<std::wstring> &arguments, std::wstring &message, std::wstring &perf) {
+	if (command == _T("crashclient")) {
+		int *foo = 0;
+		*foo = 0;
+		message = _T("We should have crashed now...");
+		return NSCAPI::returnOK;
+	}
+	return NSCAPI::returnIgnored;
+}
+
+NSC_WRAP_DLL();
+NSC_WRAPPERS_MAIN_DEF(CauseCrashes);
+NSC_WRAPPERS_IGNORE_MSG_DEF();
+NSC_WRAPPERS_HANDLE_CMD_DEF();
