@@ -1,0 +1,15 @@
+LIBRARY	CauseCrashes
+
+EXPORTS
+	NSModuleHelperInit
+	NSLoadModule
+	NSLoadModuleEx
+	NSGetModuleName
+	NSGetModuleVersion
+	NSHasCommandHandler
+	NSHasMessageHandler
+	NSHandleMessage
+	NSHandleCommand
+	NSUnloadModule
+	NSGetModuleDescription
+	NSDeleteBuffer
