@@ -1,6 +1,6 @@
 #ifndef VERSION_HPP
 #define VERSION_HPP
-#define PRODUCTVER     0,4,0,136
-#define STRPRODUCTVER  "0,4,0,136"
+#define PRODUCTVER     0,4,0,137
+#define STRPRODUCTVER  "0,4,0,137"
 #define STRPRODUCTDATE "2012-02-20"
 #endif // VERSION_HPP
